--- a/PytorchLanguage.ipynb
+++ b/PytorchLanguage.ipynb
@@ -2,26 +2,127 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
-    "from torchtext.datasets import IMDB\n",
-    "from torch.utils.data import DataLoader"
+    "\n",
+    "DEVICE = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 792k/792k [00:00<00:00, 11.7MB/s]\n",
+      "Downloading: \"https://download.pytorch.org/models/text/t5.base.generation.v2.pt\" to C:\\Users\\Kraab/.cache\\torch\\hub\\checkpoints\\t5.base.generation.v2.pt\n",
+      "100%|██████████| 945M/945M [01:17<00:00, 12.8MB/s] \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "T5Model(\n",
+       "  (token_embeddings): Embedding(32128, 768, padding_idx=0)\n",
+       "  (encoder): T5Encoder(\n",
+       "    (token_embeddings): Embedding(32128, 768, padding_idx=0)\n",
+       "    (layers): ModuleList(\n",
+       "      (0): T5Layer(\n",
+       "        (self_attn): T5MultiheadAttention(\n",
+       "          (out_proj): NonDynamicallyQuantizableLinear(in_features=768, out_features=768, bias=False)\n",
+       "          (relative_attention_bias): Embedding(32, 12)\n",
+       "        )\n",
+       "        (linear1): Linear(in_features=768, out_features=3072, bias=False)\n",
+       "        (linear2): Linear(in_features=3072, out_features=768, bias=False)\n",
+       "        (norm1): T5LayerNorm()\n",
+       "        (norm2): T5LayerNorm()\n",
+       "        (dropout1): Dropout(p=0.0, inplace=False)\n",
+       "        (dropout2): Dropout(p=0.0, inplace=False)\n",
+       "        (dropout3): Dropout(p=0.0, inplace=False)\n",
+       "      )\n",
+       "      (1-11): 11 x T5Layer(\n",
+       "        (self_attn): T5MultiheadAttention(\n",
+       "          (out_proj): NonDynamicallyQuantizableLinear(in_features=768, out_features=768, bias=False)\n",
+       "        )\n",
+       "        (linear1): Linear(in_features=768, out_features=3072, bias=False)\n",
+       "        (linear2): Linear(in_features=3072, out_features=768, bias=False)\n",
+       "        (norm1): T5LayerNorm()\n",
+       "        (norm2): T5LayerNorm()\n",
+       "        (dropout1): Dropout(p=0.0, inplace=False)\n",
+       "        (dropout2): Dropout(p=0.0, inplace=False)\n",
+       "        (dropout3): Dropout(p=0.0, inplace=False)\n",
+       "      )\n",
+       "    )\n",
+       "    (norm): T5LayerNorm()\n",
+       "    (dropout1): Dropout(p=0.0, inplace=False)\n",
+       "    (dropout2): Dropout(p=0.0, inplace=False)\n",
+       "  )\n",
+       "  (decoder): T5Decoder(\n",
+       "    (layers): ModuleList(\n",
+       "      (0): T5Layer(\n",
+       "        (self_attn): T5MultiheadAttention(\n",
+       "          (out_proj): NonDynamicallyQuantizableLinear(in_features=768, out_features=768, bias=False)\n",
+       "          (relative_attention_bias): Embedding(32, 12)\n",
+       "        )\n",
+       "        (cross_attn): T5MultiheadAttention(\n",
+       "          (out_proj): NonDynamicallyQuantizableLinear(in_features=768, out_features=768, bias=False)\n",
+       "        )\n",
+       "        (norm3): T5LayerNorm()\n",
+       "        (dropout4): Dropout(p=0.0, inplace=False)\n",
+       "        (linear1): Linear(in_features=768, out_features=3072, bias=False)\n",
+       "        (linear2): Linear(in_features=3072, out_features=768, bias=False)\n",
+       "        (norm1): T5LayerNorm()\n",
+       "        (norm2): T5LayerNorm()\n",
+       "        (dropout1): Dropout(p=0.0, inplace=False)\n",
+       "        (dropout2): Dropout(p=0.0, inplace=False)\n",
+       "        (dropout3): Dropout(p=0.0, inplace=False)\n",
+       "      )\n",
+       "      (1-11): 11 x T5Layer(\n",
+       "        (self_attn): T5MultiheadAttention(\n",
+       "          (out_proj): NonDynamicallyQuantizableLinear(in_features=768, out_features=768, bias=False)\n",
+       "        )\n",
+       "        (cross_attn): T5MultiheadAttention(\n",
+       "          (out_proj): NonDynamicallyQuantizableLinear(in_features=768, out_features=768, bias=False)\n",
+       "        )\n",
+       "        (norm3): T5LayerNorm()\n",
+       "        (dropout4): Dropout(p=0.0, inplace=False)\n",
+       "        (linear1): Linear(in_features=768, out_features=3072, bias=False)\n",
+       "        (linear2): Linear(in_features=3072, out_features=768, bias=False)\n",
+       "        (norm1): T5LayerNorm()\n",
+       "        (norm2): T5LayerNorm()\n",
+       "        (dropout1): Dropout(p=0.0, inplace=False)\n",
+       "        (dropout2): Dropout(p=0.0, inplace=False)\n",
+       "        (dropout3): Dropout(p=0.0, inplace=False)\n",
+       "      )\n",
+       "    )\n",
+       "    (norm): T5LayerNorm()\n",
+       "    (dropout1): Dropout(p=0.0, inplace=False)\n",
+       "    (dropout2): Dropout(p=0.0, inplace=False)\n",
+       "  )\n",
+       "  (lm_head): Linear(in_features=768, out_features=32128, bias=False)\n",
+       ")"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from torchtext.datasets import IMDB\n",
-    "train_iter, test_iter = IMDB(split=('train', 'test'))\n"
+    "from torchtext.models import T5_BASE_GENERATION\n",
+    "\n",
+    "\n",
+    "t5_base = T5_BASE_GENERATION\n",
+    "transform = t5_base.transform()\n",
+    "model = t5_base.get_model()\n",
+    "model.eval()\n",
+    "model.to(DEVICE)\n"
    ]
   },
   {
@@ -155,7 +256,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.6"
   },
   "orig_nbformat": 4
  },
