added more comments to explain components of the code

--- a/PytorchDemo.ipynb
+++ b/PytorchDemo.ipynb
@@ -94,6 +94,7 @@
     }
    ],
    "source": [
+    "#Outputing model defined function\n",
     "for layer in modelLR.children():\n",
     "    if isinstance(layer, nn.Linear):\n",
     "        print(f\"Model function = x * {layer.state_dict()['weight']} + {layer.state_dict()['bias']}\")\n"
@@ -135,7 +136,7 @@
     "        self.layer1 = nn.Linear(2,dimenisonalEmbedding)\n",
     "        self.layer2 = nn.Linear(dimenisonalEmbedding,2)\n",
     "    def forward(self,x):\n",
-    "        x = torch.relu(self.layer1(x))\n",
+    "        x = torch.relu(self.layer1(x)) #  Rectified Linear Activation given an input x, return x if x > 0 or 0 if not\n",
     "        return self.layer2(x)"
    ]
   },
@@ -254,7 +255,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# dataset operations\n",
-    "# turns a image represented as a 2d array into a 1 d array\n",
+    "# transform that will take the PIL Image and convert it into a torch tensor\n",
     "transform = transforms.Compose([transforms.ToTensor()])\n",
     "data = torchvision.datasets.MNIST(root='./data', train=True, download=True, transform=transform)\n",
     "train_data, test_data = train_test_split(data, test_size=0.1)\n",
@@ -308,8 +309,12 @@
     "class SimpleCNN(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(SimpleCNN, self).__init__()\n",
-    "        self.conv1 = nn.Conv2d(1, 16, 3)\n",
-    "        self.fc1 = nn.Linear(16*26*26, 10)\n",
+    "        self.conv1 = nn.Conv2d(1, 16, 3) #This layer expects 1 input channel (because MNIST images are grayscale), outputs 16 channels, and uses a 3x3 kernel.\n",
+    "        self.fc1 = nn.Linear(16*26*26, 10) \n",
+    "        #The spatial size of the image is reduced from 28x28 to 26x26. \n",
+    "        #This is due to the kernel size of 3x3 without padding. \n",
+    "        #Therefore, after the convolutional layer, the shape is [batch_size, 16, 26, 26], \n",
+    "        #which is reshaped to [batch_size, 162626] before passing to the linear layer.\n",
     "    \n",
     "    def forward(self, x):\n",
     "        x = torch.relu(self.conv1(x))\n",
@@ -427,6 +432,7 @@
     }
    ],
    "source": [
+    "#https://seaborn.pydata.org/installing.html\n",
     "import seaborn as sns\n",
     "mplt.figure(figsize=(10,7))\n",
     "sns.color_palette(\"bright\", 10)\n",
