--- a/PytorchDemoBlank.ipynb
+++ b/PytorchDemoBlank.ipynb
@@ -110,7 +110,7 @@
     "\n",
     "\n",
     "# Example Dataset handwritten digits\n",
-    "# Turns a image represented as a 2d array into a 1 d array\n",
+    "# Transform that will take the PIL Image and convert it into a torch tensor\n",
     "# Images are already greyscaled "
    ]
   },
@@ -193,6 +193,7 @@
    "outputs": [],
    "source": [
     "#Nicer Looking Confusion Matrix\n",
+    "#https://seaborn.pydata.org/installing.html\n",
     "import seaborn as sns\n",
     "mplt.figure(figsize=(10,7))\n",
     "sns.color_palette(\"bright\", 10)\n",
